objects/Known_Issue__c.object
<CustomObject>
    <fields>
        <fullName>ETA__c</fullName>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In review</fullName>
                    <default>true</default>
                    <label>In review</label>
                </value>
                <value>
                    <fullName>Fixing</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>No Fix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_to_reproduce__c</fullName>
        <label>Steps to reproduce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tittle__c</fullName>
        <label>Tittle</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <label>Workaround</label>
        <length>27000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Known Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tittle__c</columns>
        <columns>Status__c</columns>
        <columns>ETA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>KI-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Known Issue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>